table now generated from JS, added styling to table

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ body {
 
 table {
     border-spacing: 10px;
+    border-radius: 5px;
+    background-color: rgb(190, 71, 71);
 }
 
 .hero-text {
@@ -20,4 +22,12 @@ table {
 
 .lib-table {
     margin: 15px auto;
+}
+
+.aligned-right {
+    text-align: right;
+}
+
+.aligned-center {
+    text-align: center;
 }
