--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,19 @@ table {
     border-spacing: 10px;
 }
 
-#addBook {
+#add-book {
     padding: 5px 25px;
     margin: 10px auto;
+}
+
+#add-book-dialog {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    border: none;
+    box-shadow: 4px 4px 4px #444444;
 }
 
 .hero-text {
