--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ table {
     transform: translate(-50%, -50%);
     padding: 10px;
     border: none;
-    box-shadow: 4px 4px 4px #444444;
+    box-shadow: 4px 4px 4px #4e1313;
 }
 
 .hero-text {
